2007-03-08  Albert Chu <chu11@llnl.gov>

	* ipmiconsole/: Do not lock memory by default.  Adjust -L option
	appropriately.
	
2007-03-07  Albert Chu <chu11@llnl.gov>

        * ipmipower/ipmipower.8.in, ipmipower/src/ipmipower_config.c
        (ipmipower_config_cmdline_parse), ipmiconsole/ipmiconsole.8.in,
        ipmiconsole/src/ipmiconsole/ipmiconsole_config.c (_cmdline_parse):
        Add -P and -K option.

        * common/src/argp-common.h, common/src/argp-common.c,
        common/doc/argp-common-outofband.man: Support -P option.  Remove
        optional argument of -p due to parsing issues.
	
2007-03-06  Albert Chu <chu11@llnl.gov>

	* ipmiconsole/ipmiconsole.8.in, ipmiconsole/ipmiconsole.conf.5.in,
	ipmiconsole/src/ipmiconsole/ipmiconsole_config.h,
	ipmiconsole/src/ipmiconsole/ipmiconsole_config.c,
	ipmiconsole/src/ipmiconsole/ipmiconsole.c: Add -N option support.

	* ipmiconsole/src/libipmiconsole/ipmiconsole_engine.c
	(_ipmiconsole_cleanup_ctx_session): Remove unnecessary
	conditional.

	* ipmiconsole/src/libipmiconsole/ipmiconsole_engine.c
	(_ipmiconsole_cleanup_ctx_session, _ipmiconsole_init_ctx_session):
	Fix mem initialization bug.

	* ipmiconsole/src/libipmiconsole/cbuf.h,
	ipmiconsole/src/libipmiconsole/cbuf.c: New files for ipmiconsole
	secure mallocs.

	* ipmiconsole/src/libipmiconsole/Makefile.am: Add cbuf.h and
	cbuf.c for new build.

	* common/src/cbuf.c: Remove secure malloc code.

	* common/src/Makefile.am: Split off cbuf into a separate lib.

	* ipmipower/src/Makefile.am: Use new cbuf common lib.

	* ipmiconsole/src/libipmiconsole/: Support optional secure
	mallocs.
	
	* ipmiconsole/ipmiconsole.8.in, ipmiconsole/ipmiconsole.conf.5.in,
	ipmiconsole/src/ipmiconsole/: Add -L option support.
	
2006-12-18  Albert Chu <chu11@llnl.gov>

	* configure.ac: Update for release.

	* tagged Release-0_3_1.
	
2006-12-15  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/include/freeipmi/ipmi-cipher-suite-spec.h,